simplify javadocs